force-app/main/default/objects/Account/fields/GFD_Consent_for_referral__c.field-meta.xml
<CustomField>
    <fullName>GFD_Consent_for_referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for GFD. Has the client/ NOK consented to this referral?</description>
    <label>Consent for referral</label>
    <type>Checkbox</type>
</CustomField>