force-app/main/default/objects/Account/fields/GFD_Date__c.field-meta.xml
<CustomField>
    <fullName>GFD_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>