force-app/main/default/objects/Account/fields/GFD_Date_of_final_meal__c.field-meta.xml
<CustomField>
    <fullName>GFD_Date_of_final_meal__c</fullName>
    <description>This is for GFD to capture date of final meal.</description>
    <label>Date of final meal</label>
    <type>Date</type>
</CustomField>