force-app/main/default/objects/Account/fields/GFD_Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>GFD_Delivery_Instructions__c</fullName>
    <description>This is for GFD for providing delivery instructions(where to leave/ how to notify)</description>
    <label>Delivery Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>