force-app/main/default/objects/Account/fields/GFD_Delivery_time_12_45_14_00__c.field-meta.xml
<CustomField>
    <fullName>GFD_Delivery_time_12_45_14_00__c</fullName>
    <description>This is GFD assessment checklist to know if delivery time is (12:45 - 14:00)</description>
    <label>Delivery time (12:45 - 14:00)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>