force-app/main/default/objects/Account/fields/GFD_Details_confirmed_with_client_nok__c.field-meta.xml
<CustomField>
    <fullName>GFD_Details_confirmed_with_client_nok__c</fullName>
    <description>This is for GFD to check if Food Details is confirmed with client/nok?</description>
    <label>Food Details confirmed with client/nok?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>