force-app/main/default/objects/Account/fields/GFD_Dislikes__c.field-meta.xml
<CustomField>
    <fullName>GFD_Dislikes__c</fullName>
    <description>This is for GFD to list out any foods that client dont like.</description>
    <label>Dislikes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>