force-app/main/default/objects/Account/fields/GFD_Duration_agreed__c.field-meta.xml
<CustomField>
    <fullName>GFD_Duration_agreed__c</fullName>
    <description>This is for GFD, to know if the Duration is agreed?</description>
    <label>Duration agreed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>