force-app/main/default/objects/Account/fields/GFD_Email__c.field-meta.xml
<CustomField>
    <fullName>GFD_Email__c</fullName>
    <label>GFD Referral Source Email</label>
    <type>Email</type>
</CustomField>