force-app/main/default/objects/Account/fields/GFD_Email_optional__c.field-meta.xml
<CustomField>
    <fullName>GFD_Email_optional__c</fullName>
    <description>This is an email field created for capturing Info for Operations
Invoicing</description>
    <label>Email (optional)</label>
    <type>Email</type>
</CustomField>