force-app/main/default/objects/Account/fields/GFD_Email_sent_to_referring_agent__c.field-meta.xml
<CustomField>
    <fullName>GFD_Email_sent_to_referring_agent__c</fullName>
    <description>This is a date field for GFD for Email sent to referring agent?</description>
    <label>Email sent to referring agent?</label>
    <type>Date</type>
</CustomField>