force-app/main/default/objects/Account/fields/GFD_Friday_Meals__c.field-meta.xml
<CustomField>
    <fullName>GFD_Friday_Meals__c</fullName>
    <description>This is created for GFD to capture delivery of Friday meals</description>
    <label>Friday Meals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>