force-app/main/default/objects/Account/fields/GFD_Is_MC_main_POC__c.field-meta.xml
<CustomField>
    <fullName>GFD_Is_MC_main_POC__c</fullName>
    <description>This is for GFD to know if MC is main POC?</description>
    <label>Is MC main POC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>