force-app/main/default/objects/Account/fields/GFD_Kept_food_log__c.field-meta.xml
<CustomField>
    <fullName>GFD_Kept_food_log__c</fullName>
    <description>This is for GFD to know if there is any food log kept?</description>
    <label>Kept food log?</label>
    <type>Phone</type>
</CustomField>