force-app/main/default/objects/Account/fields/GFD_Main_POC_updated__c.field-meta.xml
<CustomField>
    <fullName>GFD_Main_POC_updated__c</fullName>
    <description>This field is created for GFD to Check/ Update who is main POC?</description>
    <label>Main POC updated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>