force-app/main/default/objects/Account/fields/GFD_Meals_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>GFD_Meals_Start_Date__c</fullName>
    <description>This field is for GFD to capture MEALS START DATE</description>
    <label>Meals Start Date</label>
    <type>Date</type>
</CustomField>