force-app/main/default/objects/Account/fields/GFD_Medically_prescribed_diet__c.field-meta.xml
<CustomField>
    <fullName>GFD_Medically_prescribed_diet__c</fullName>
    <description>This is created for GFD to understand Medically prescribed dietary requirement</description>
    <label>Medically prescribed dietary requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>