force-app/main/default/objects/Account/fields/GFD_Monday_Meals__c.field-meta.xml
<CustomField>
    <fullName>GFD_Monday_Meals__c</fullName>
    <description>This is for GFD for Delivery Information on Monday meals</description>
    <label>Monday Meals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>