force-app/main/default/objects/Account/fields/GFD_Next_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>GFD_Next_Action_Required__c</fullName>
    <description>This is for GFD to capture the next steps that is required during the operation.</description>
    <label>Next Action Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>