force-app/main/default/objects/Account/fields/GFD_Notes_for_Accounts_optional__c.field-meta.xml
<CustomField>
    <fullName>GFD_Notes_for_Accounts_optional__c</fullName>
    <description>This is for capturing GFD notes for accounts(invoicing)</description>
    <label>Notes for Accounts (optional)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>