force-app/main/default/objects/Account/fields/GFD_Other_Comments_Information__c.field-meta.xml
<CustomField>
    <fullName>GFD_Other_Comments_Information__c</fullName>
    <description>This is for GFD to capture the comments after followup.</description>
    <label>Other Comments/ Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>