force-app/main/default/objects/Account/fields/GFD_Phone_essential__c.field-meta.xml
<CustomField>
    <fullName>GFD_Phone_essential__c</fullName>
    <description>This is a phone field for GFD Info for Operations Invoicing</description>
    <label>Phone (essential)</label>
    <type>Phone</type>
</CustomField>