force-app/main/default/objects/Account/fields/GFD_Please_clarify_reason_for_no__c.field-meta.xml
<CustomField>
    <fullName>GFD_Please_clarify_reason_for_no__c</fullName>
    <description>This is for GFD. Consent to share info with MC
(if no, please clarify)</description>
    <label>Please clarify reason for &apos;no&apos;</label>
    <type>TextArea</type>
</CustomField>