force-app/main/default/objects/Account/fields/GFD_Potential_finish_date_agreed__c.field-meta.xml
<CustomField>
    <fullName>GFD_Potential_finish_date_agreed__c</fullName>
    <description>This is for GFD to capture Potential finish date agreed?</description>
    <label>Potential finish date agreed?</label>
    <type>Date</type>
</CustomField>