force-app/main/default/objects/Account/fields/GFD_Professional_Title__c.field-meta.xml
<CustomField>
    <fullName>GFD_Professional_Title__c</fullName>
    <label>Professional Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>