force-app/main/default/objects/Account/fields/GFD_Reason_for_referral__c.field-meta.xml
<CustomField>
    <fullName>GFD_Reason_for_referral__c</fullName>
    <label>Reason for referral</label>
    <type>TextArea</type>
</CustomField>