force-app/main/default/objects/Account/fields/GFD_Source_of_referral_Surname__c.field-meta.xml
<CustomField>
    <fullName>GFD_Source_of_referral_Surname__c</fullName>
    <label>Source of referral Surname</label>
    <length>40</length>
    <type>Text</type>
</CustomField>