force-app/main/default/objects/Account/fields/GFD_Telephone__c.field-meta.xml
<CustomField>
    <fullName>GFD_Telephone__c</fullName>
    <label>Telephone</label>
    <type>Phone</type>
</CustomField>