force-app/main/default/objects/Account/fields/GFD_Temporary_Client__c.field-meta.xml
<CustomField>
    <fullName>GFD_Temporary_Client__c</fullName>
    <description>This is for GFD to know if client is temporary.</description>
    <label>Temporary Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>