force-app/main/default/objects/Account/fields/GFD_Updated_client_conta__c.field-meta.xml
<CustomField>
    <fullName>GFD_Updated_client_conta__c</fullName>
    <description>This is created for GFD to Check/ Update Client Contact Details</description>
    <label>Updated client contact details?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>