force-app/main/default/objects/Account/fields/GFD_Updated_emergency_contact__c.field-meta.xml
<CustomField>
    <fullName>GFD_Updated_emergency_contact__c</fullName>
    <description>This is for GFD to Check/ Update emergency contacts?</description>
    <label>Updated emergency contact?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>