force-app/main/default/objects/Account/fields/GFDClient_NOK_understands_2_weeks_notice__c.field-meta.xml
<CustomField>
    <fullName>GFDClient_NOK_understands_2_weeks_notice__c</fullName>
    <description>This is for GFD  to know if Client/NOK understands 2 weeks notice?</description>
    <label>Client/NOK understands 2 weeks notice?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>