force-app/main/default/objects/Account/fields/GP_Name__c.field-meta.xml
<CustomField>
    <fullName>GP_Name__c</fullName>
    <label>GP Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>