force-app/main/default/objects/Account/fields/Hearing__c.field-meta.xml
<CustomField>
    <fullName>Hearing__c</fullName>
    <label>Hearing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>