force-app/main/default/objects/Account/fields/Home_Supports__c.field-meta.xml
<CustomField>
    <fullName>Home_Supports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Supports</label>
    <type>Checkbox</type>
</CustomField>