force-app/main/default/objects/Account/fields/How_has_the_clients_managed_to_date__c.field-meta.xml
<CustomField>
    <fullName>How_has_the_clients_managed_to_date__c</fullName>
    <label>How has the clients managed to date?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>