force-app/main/default/objects/Account/fields/Invoicing_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Name__c</fullName>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>