force-app/main/default/objects/Account/fields/Invoicing_Surname__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Surname__c</fullName>
    <label>Surname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>