force-app/main/default/objects/Account/fields/Is_BS_section_updated__c.field-meta.xml
<CustomField>
    <fullName>Is_BS_section_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is BS section updated</label>
    <type>Checkbox</type>
</CustomField>