force-app/main/default/objects/Account/fields/Is_client_aware_of_services__c.field-meta.xml
<CustomField>
    <fullName>Is_client_aware_of_services__c</fullName>
    <description>This field is for BS to capture if Client understands the service + expectations/ boundaries.</description>
    <label>Is client aware of services?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>