force-app/main/default/objects/Account/fields/Is_GFD_section_updated__c.field-meta.xml
<CustomField>
    <fullName>Is_GFD_section_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is GFD section updated</label>
    <type>Checkbox</type>
</CustomField>