force-app/main/default/objects/Account/fields/Levels_of_Support__c.field-meta.xml
<CustomField>
    <fullName>Levels_of_Support__c</fullName>
    <description>This is for MC(B&amp;S) to describe: family (who/ where/ level of support)</description>
    <label>Levels of Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>