force-app/main/default/objects/Account/fields/Location_County_Country__c.field-meta.xml
<CustomField>
    <fullName>Location_County_Country__c</fullName>
    <label>Location(County/Country)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>