force-app/main/default/objects/Account/fields/Location_County_Country_of_2nd_Contact__c.field-meta.xml
<CustomField>
    <fullName>Location_County_Country_of_2nd_Contact__c</fullName>
    <label>Location(County/Country) of 2nd Contact</label>
    <length>40</length>
    <type>Text</type>
</CustomField>