force-app/main/default/objects/Account/fields/Main_POC_updated__c.field-meta.xml
<CustomField>
    <fullName>Main_POC_updated__c</fullName>
    <description>This is for BS to Check/ Update who is main POC</description>
    <label>Main POC updated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>