force-app/main/default/objects/Account/fields/Meal_Supply__c.field-meta.xml
<CustomField>
    <fullName>Meal_Supply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meal Supply</label>
    <type>Checkbox</type>
</CustomField>