force-app/main/default/objects/Account/fields/Method_of_invoicing__c.field-meta.xml
<CustomField>
    <fullName>Method_of_invoicing__c</fullName>
    <label>Method of invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone/ Email + Bank Card</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>