force-app/main/default/objects/Account/fields/Mobility__c.field-meta.xml
<CustomField>
    <fullName>Mobility__c</fullName>
    <label>Mobility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>