force-app/main/default/objects/Account/fields/Newsletter_Consent__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Consent__c</fullName>
    <label>Newsletter Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>