force-app/main/default/objects/Account/fields/Next_Actions__c.field-meta.xml
<CustomField>
    <fullName>Next_Actions__c</fullName>
    <description>This is created for BS.</description>
    <label>Next Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>