force-app/main/default/objects/Account/fields/Notes_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Notes_Reminders__c</fullName>
    <label>Notes/ Reminders</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>