force-app/main/default/objects/Account/fields/Other_organisation_volunteers__c.field-meta.xml
<CustomField>
    <fullName>Other_organisation_volunteers__c</fullName>
    <description>This field is created for MC to check if client have volunteer from other org.?</description>
    <label>Other organisation volunteers?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>