force-app/main/default/objects/Account/fields/Phone_alternative__c.field-meta.xml
<CustomField>
    <fullName>Phone_alternative__c</fullName>
    <label>Phone (alternative)</label>
    <type>Phone</type>
</CustomField>