force-app/main/default/objects/Account/fields/Potential_Supports__c.field-meta.xml
<CustomField>
    <fullName>Potential_Supports__c</fullName>
    <label>Potential Supports</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Befriending Visits</fullName>
            </value>
            <value>
                <fullName>Befriending Calls</fullName>
            </value>
            <value>
                <fullName>Good Food Delivered&lt;br&gt;Hospital discharge support</fullName>
            </value>
            <value>
                <fullName>Covid-19 Shopping</fullName>
            </value>
            <value>
                <fullName>Covid-19 Pension</fullName>
            </value>
            <value>
                <fullName>Support to Exercise</fullName>
            </value>
            <value>
                <fullName>Book Drop/ Library&lt;br&gt;Digital literacy</fullName>
            </value>
            <value>
                <fullName>Events: live/ online</fullName>
            </value>
            <value>
                <fullName>Events: neighbourhood&lt;br&gt;Home (family volunteering)</fullName>
            </value>
            <value>
                <fullName>Link to: external services&lt;br&gt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>