force-app/main/default/objects/Account/fields/Previous_occupation__c.field-meta.xml
<CustomField>
    <fullName>Previous_occupation__c</fullName>
    <label>Previous occupation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>