force-app/main/default/objects/Account/fields/Professional_Title__c.field-meta.xml
<CustomField>
    <fullName>Professional_Title__c</fullName>
    <label>Professional Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>