force-app/main/default/objects/Account/fields/Reason_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Referral__c</fullName>
    <label>Reason for Referral</label>
    <type>TextArea</type>
</CustomField>