force-app/main/default/objects/Account/fields/Referral_Agent_Comments_B_S__c.field-meta.xml
<CustomField>
    <fullName>Referral_Agent_Comments_B_S__c</fullName>
    <label>Referral Agent Comments (B&amp;S)</label>
    <type>TextArea</type>
</CustomField>