force-app/main/default/objects/Account/fields/Referral_Agent_Comments_GFD__c.field-meta.xml
<CustomField>
    <fullName>Referral_Agent_Comments_GFD__c</fullName>
    <label>Referral Agent Comments (GFD)</label>
    <type>TextArea</type>
</CustomField>