force-app/main/default/objects/Account/fields/Referred_to_another_befriending_agency__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_another_befriending_agency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referred to another befriending agency</label>
    <type>Checkbox</type>
</CustomField>