force-app/main/default/objects/Account/fields/Referring_agent_updated_as_required__c.field-meta.xml
<CustomField>
    <fullName>Referring_agent_updated_as_required__c</fullName>
    <description>This is for BS to check if Referring agent updated as required</description>
    <label>Referring agent updated as required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>