force-app/main/default/objects/Account/fields/Relationship_to_applicant_2nd_contact__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_applicant_2nd_contact__c</fullName>
    <description>This field is created to know 2nd contact person&apos;s relationship with the applicant</description>
    <label>Relationship to applicant 2nd contact</label>
    <length>40</length>
    <type>Text</type>
</CustomField>