force-app/main/default/objects/Account/fields/Relationship_to_applicant__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_applicant__c</fullName>
    <label>Relationship to applicant</label>
    <length>40</length>
    <type>Text</type>
</CustomField>