force-app/main/default/objects/Account/fields/Relevant_Information__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Information__c</fullName>
    <description>This field is for GFD. Created for capturing Relevant Information: e.g. Mobility, Deafness, Dementia:</description>
    <label>Relevant Information</label>
    <type>TextArea</type>
</CustomField>