force-app/main/default/objects/Account/fields/Service_Selection__c.field-meta.xml
<CustomField>
    <fullName>Service_Selection__c</fullName>
    <label>Service Selection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Befriending &amp; Supports Visits</fullName>
            </value>
            <value>
                <fullName>Telephone Befriending Calls</fullName>
            </value>
            <value>
                <fullName>Covid-19 Emergency Supports</fullName>
            </value>
            <value>
                <fullName>Cultural Connections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>