force-app/main/default/objects/Account/fields/Speech__c.field-meta.xml
<CustomField>
    <fullName>Speech__c</fullName>
    <label>Speech</label>
    <length>255</length>
    <type>Text</type>
</CustomField>