force-app/main/default/objects/Account/fields/Surgery_name_location__c.field-meta.xml
<CustomField>
    <fullName>Surgery_name_location__c</fullName>
    <label>Surgery name &amp; location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>