force-app/main/default/objects/Account/fields/Vision__c.field-meta.xml
<CustomField>
    <fullName>Vision__c</fullName>
    <label>Vision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>