force-app/main/default/objects/Account/fields/Volunteer_Match__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Match</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Volunteer Match)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>