force-app/main/default/objects/Account/fields/Wednesday_Meals__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Meals__c</fullName>
    <label>Wednesday Meals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>