force-app/main/default/objects/Account/fields/Who_is_the_main_POC__c.field-meta.xml
<CustomField>
    <fullName>Who_is_the_main_POC__c</fullName>
    <label>Who is the main POC?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>