force-app/main/default/objects/Account/fields/Young_or_mature_volunteer_suitable__c.field-meta.xml
<CustomField>
    <fullName>Young_or_mature_volunteer_suitable__c</fullName>
    <description>This is for MC to capture vounlteers with:
Young 
Mature 
Any Age</description>
    <label>Young or mature volunteer suitable?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Young</fullName>
            </value>
            <value>
                <fullName>Mature</fullName>
            </value>
            <value>
                <fullName>Any Age</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>