force-app/main/default/objects/Account/listViews/Household_Accounts.listView-meta.xml
<ListView>
    <fullName>Household_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>GFD_Telephone__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Service_Selection__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Household</value>
    </filters>
    <label>Household Accounts</label>
    <language>en_US</language>
</ListView>